--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
       <div class="controls">
         <button id="start-btn" class="start-btn btn">Start</button>
         <button id="next-btn" class="next-btn btn hide">Next</button>
+        <a href="./highscore page.html">
         <button id="highscore-btn" class="highscore-btn btn hide">View Highscores</button>
+         </a>
      </div>
      <div id="score-container" class="scores hide">
         <ol>
